# dbx-batch-ml-feature-dev-demo

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
resources/: append_one_day_job.yml  job.yml  pipeline.yml  restate_three_dates_job.yml  seed_initial_data_job.yml
src/: logging_config.py
src/features/: __init__.py  feature_catalog.py
src/jobs/: append_one_day.py  build_prediction_set.py  build_training_set.py  generate_scroll_data.py  restate_three_dates.py
src/pipeline/common/: date_spine.sql  date_spine_observable.sql  eligibility_prediction.sql  labels_did_login_within_7d.sql  silver_account.sql
src/pipeline/scroll/: dim_spender_tier.sql  silver_battle.sql  silver_progression.sql  silver_purchase.py  silver_purchase_enriched.sql  silver_purchase_velocity.sql  silver_session.sql  silver_session_recent.sql  silver_social.sql  silver_social_enriched.sql
