[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-fs-demo"
version = "0.1.0"
description = "Spark Declarative Pipelines + Declarative Feature Store demo."
requires-python = ">=3.11"
dependencies = [
  "databricks-feature-engineering>=0.13.0",
  "databricks-sdk>=0.40.0",
]

# The wheel ships the importable library only: the `features` package and the
# `logging_config` module. The entry-point scripts under src/jobs/ run as
# spark_python_task python_files and import this wheel from the serverless environment.
[tool.setuptools]
package-dir = { "" = "src" }
packages = ["features"]
py-modules = ["logging_config"]

# Dev tooling (formatting, linting, static analysis, git hooks). Installed via
# `uv sync` / `uv run`; orchestrated on commit by pre-commit (.pre-commit-config.yaml).
[dependency-groups]
dev = [
  "ruff>=0.8.6",
  "mypy>=1.14",
  "pre-commit>=4.0",
]

# Formatter + linter (replaces black / isort / flake8).
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
# pycodestyle/pyflakes + import sorting (I), pyupgrade (UP), bugbear (B),
# flake8-simplify (SIM), flake8-comprehensions (C4).
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
# Line length is enforced by the formatter (line-length = 88); E501 in the linter only
# flags the few SQL-in-f-string / PySpark expression lines the formatter can't break.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# SDP pipeline Python files reference runtime-injected globals (e.g. `spark`) with no import.
"src/pipeline/**/*.py" = ["F821"]

# Static type checker.
[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true   # pyspark / databricks-* ship limited stubs
warn_redundant_casts = true
warn_unused_ignores = true
